--- a/styles.css
+++ b/styles.css
@@ -212,8 +212,8 @@ input {
     padding: 10px 0 10px 10px;
     background-color: rgba(1, 112, 188, .15);
 }
-#downloadGuide {
-    padding: 0.9em;
+.downloadGuide {
+    padding: 0.8em;
     margin-top: 25px;
     margin-left: 7px;
     font-weight: 900;
@@ -225,9 +225,9 @@ input {
     border-radius: .4em;
     border-style: none;
     background-image: linear-gradient(60deg, #086DB9, #5049A3, #AF2B93);
-    
+    font-family: 'brandon-grotesque', 'Trebuchet MS', sans-serif;
 }
-#downloadGuide:hover {
+.downloadGuide:hover {
     background-color: #086DB9;
     background: linear-gradient(45deg, #086DB9, #5049A3, #AF2B93);
     -webkit-background-clip: text;
@@ -254,4 +254,16 @@ footer p {
     margin-right: 320px;
     margin-top: -18px;
     z-index: -1;
+}
+#thankYou {
+    padding-bottom: 10em;
+}
+#thankYou p {
+    text-align: left;
+    margin-left: -1px;
+}
+h6 {
+    font-size: 200%;
+    color: #5049A3;
+    margin-top: 20px;
 }
